# Fatal_Frame_Characters

./: CMakeLists.txt  README.md
headers/: common_types.h
headers/FatalFrame1/: ff1_plyr.h  ig_init.h
headers/FatalFrame1/game/: ig_init.h  ingame.h
headers/FatalFrame1/plyr/: ff1_plyr_ctrl.h
src/: ff1_plyr.cpp  main.cpp
src/FatalFrame1/: ff1_plyr.cpp
src/FatalFrame1/game/: ig_init.cpp  ingame.cpp
src/FatalFrame1/plyr/: ff1_plyr_ctrl.cpp
